[package]
name = "krustlet-wasm3"
version = "0.1.0"
authors = ["Matthew Fisher <matt.fisher@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
futures = "0.3"
k8s-openapi = { version = "0.7", features = ["v1_17"] }
kube = "0.33"
kubelet = {version = "0.2", features = ["cli"]}
log = "0.4"
oci-distribution = "0.1"
tempfile = "3.1"
tokio = { version = "0.2", features = ["fs", "stream", "macros", "io-util", "sync"] }
wasm3 = { git = "https://github.com/Veykril/wasm3-rs.git", features = ["wasi"] }
wat = "1.0"
